# MARecoder

./: CMakeLists.txt
src/: backends.cpp  backends.h  init_window.cpp  init_window.h  main.cpp
src/windows/: choose_number_window.cpp  input_name_window.cpp  recorder_window.cpp  window_base.h
